Enhances payment handling and integrates manual confirmation
Introduces a new service and API endpoint for staff to confirm manual payments for DINE_IN orders. This allows recording payments for in-person transactions.

Integrates payment status more deeply into order management:
- Prevents modification of order items (add, remove, update quantity) if the associated payment has succeeded.
- Blocks transitioning an order to FINISHED status until its payment has succeeded.
- Ensures a payment record with a 'REQUIRES_PAYMENT' status is created for DINE_IN orders at creation time.

Enriches the dining table listing with active order payment status and introduces a new filter to view tables based on their payment status (paid/unpaid).

Refactors `PaymentJpaEntity` to include a `manual_reference` field and adds database constraints to ensure payment `amount_cents` are positive and `currency` is not blank.